# SSE_Publisher

./: client_sse.html  docker-compose.yml  pyproject.toml  settings.py
app/: client_sse.html  client_sse_alert.html  dependencies.py  main.py
app/docs/: Workers_Job.drawio
app/workers/: worker_creating.py  worker_father.py  worker_input_output.py
event_bus/: __init__.py  consumer.py  models.py  producer.py
