[tool.poetry]
name = "sse-publisher"
version = "0.1.0"
description = ""
authors = ["IX <borntokill.ix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
fastapi-plugins = "^0.13.0"
sse-starlette = "^2.0.0"
confluent-kafka = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
